[tool.poetry]
name = "lesson10-geocoding-a5719083"
version = "0.1.0"
description = ""
authors = ["a5719083 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.1.0"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
